<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_screen_background_image"
    tools:context=".LogInScreen">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:rotation="5"
        android:scaleType="centerCrop"
        android:src="@drawable/logo_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.139" />

    <View
        android:id="@+id/vwLogIn"
        android:layout_width="300dp"
        android:layout_height="350dp"
        android:background="@drawable/rounded_border"
        android:radius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo"
        app:layout_constraintVertical_bias="0.458" />

    <EditText
        android:id="@+id/etUser"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:backgroundTint="@color/white"
        android:hint="@string/user"
        android:textAlignment="center"
        android:textColor="@color/customWhite"
        android:textColorHint="@color/customWhite"
        android:textSize="18sp"
        android:tooltipText="Usuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/vwLogIn" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/customWhite"
        android:textColorHint="@color/customWhite"
        android:textSize="18sp"
        android:tooltipText="Contraseña"
        app:layout_constraintBottom_toBottomOf="@+id/vwLogIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUser"
        app:layout_constraintVertical_bias="0.147" />

    <ImageButton
        android:id="@+id/btnShowPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:background="@null"
        android:src="@drawable/closed_eye_password_24"
        app:layout_constraintBottom_toTopOf="@+id/btnLogIn"
        app:layout_constraintEnd_toEndOf="@+id/vwLogIn"
        app:layout_constraintHorizontal_bias="0.346"
        app:layout_constraintStart_toEndOf="@+id/etPassword"
        app:layout_constraintTop_toTopOf="@+id/vwLogIn"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnLogIn"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:backgroundTint="@color/lighterBrown"
        android:text="ENTRAR"
        app:layout_constraintBottom_toBottomOf="@+id/vwLogIn"
        app:layout_constraintEnd_toEndOf="@+id/vwLogIn"
        app:layout_constraintStart_toStartOf="@+id/vwLogIn"
        app:layout_constraintTop_toBottomOf="@+id/etPassword"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/registrarse_msg"
        android:textColor="@color/lighterBrown"
        app:layout_constraintBottom_toBottomOf="@+id/vwLogIn"
        app:layout_constraintEnd_toEndOf="@+id/vwLogIn"
        app:layout_constraintStart_toStartOf="@+id/vwLogIn"
        app:layout_constraintTop_toBottomOf="@+id/btnLogIn"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="130dp"
        android:layout_height="38dp"
        android:gravity="center"
        android:shadowColor="@android:color/transparent"
        android:text="@string/registrate_msg"
        android:textAllCaps="false"
        android:textColor="@color/customWhite"
        android:textSize="13sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/vwLogIn"
        app:layout_constraintEnd_toEndOf="@+id/vwLogIn"
        app:layout_constraintStart_toStartOf="@+id/vwLogIn"
        app:layout_constraintTop_toBottomOf="@+id/btnLogIn"
        app:layout_constraintVertical_bias="0.46" />

</androidx.constraintlayout.widget.ConstraintLayout>